# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("//bazel_tools:scala.bzl", "da_scala_library")

da_scala_library(
    name = "resources-grpc",
    srcs = glob(["src/main/scala/**/*.scala"]),
    tags = ["maven_coordinates=com.daml:resources-grpc:__VERSION__"],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//libs-scala/resources",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_netty_netty_common",
        "@maven//:io_netty_netty_transport",
    ],
)
