# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("//bazel_tools:scala.bzl", "da_scala_library")
load("@scala_version//:index.bzl", "scala_major_version")

da_scala_library(
    name = "resources",
    srcs = glob(["src/main/scala/**/*.scala"]) + glob(["src/main/{}/**/*.scala".format(scala_major_version)]),
    tags = ["maven_coordinates=com.daml:resources:__VERSION__"],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//libs-scala/contextualized-logging",
    ],
)
