# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_library",
)

da_scala_library(
    name = "non-repudiation-postgresql",
    srcs = glob(["src/main/scala/**/*.scala"]),
    resource_strip_prefix = "runtime-components/non-repudiation-postgresql/src/main/resources/",
    resources = glob(["src/main/resources/com/daml/nonrepudiation/postgresql/*"]),
    scala_deps = [
        "@maven//:com_chuusai_shapeless",
        "@maven//:org_tpolecat_doobie_core",
        "@maven//:org_tpolecat_doobie_free",
        "@maven//:org_tpolecat_doobie_hikari",
        "@maven//:org_typelevel_cats_core",
        "@maven//:org_typelevel_cats_effect",
        "@maven//:org_typelevel_cats_free",
        "@maven//:org_typelevel_cats_kernel",
    ],
    visibility = [
        "//:__subpackages__",
    ],
    deps = [
        "//libs-scala/resources",
        "//runtime-components/non-repudiation",
        "//runtime-components/non-repudiation-resources",
        "@maven//:com_zaxxer_HikariCP",
        "@maven//:org_flywaydb_flyway_core",
    ],
)
