# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_library",
)

da_scala_library(
    name = "non-repudiation",
    srcs = glob(["src/main/scala/**/*.scala"]),
    visibility = [
        "//:__subpackages__",
    ],
    deps = [
        "//ledger-api/grpc-definitions:ledger_api_proto_scala",
        "//libs-scala/grpc-reverse-proxy",
        "//libs-scala/grpc-utils",
        "//libs-scala/resources",
        "//runtime-components/non-repudiation-core",
        "@maven//:com_google_guava_guava",
        "@maven//:io_dropwizard_metrics_metrics_core",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
