# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:haskell.bzl",
    "da_haskell_library",
)

da_haskell_library(
    name = "daml-doc",
    srcs = glob(["src/**/*.hs"]),
    hackage_deps = [
        "aeson-pretty",
        "aeson",
        "base",
        "blaze-html",
        "bytestring",
        "cmark-gfm",
        "containers",
        "data-default",
        "directory",
        "extra",
        "filepath",
        "filepattern",
        "ghc-lib-parser",
        "ghc-lib",
        "ghcide",
        "hashable",
        "lsp",
        "lsp-types",
        "mtl",
        "network-uri",
        "prettyprinter",
        "safe",
        "stache",
        "text",
        "transformers",
        "unordered-containers",
    ],
    src_strip_prefix = "src",
    visibility = ["//visibility:public"],
    deps = [
        "//compiler/damlc/daml-ide-core",
        "//compiler/damlc/daml-opts",
        "//compiler/damlc/daml-opts:daml-opts-types",
        "//compiler/damlc/daml-rule-types",
        "//libs-haskell/da-hs-base",
    ],
)
