# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("//bazel_tools:haskell.bzl", "da_haskell_library")

da_haskell_library(
    name = "hs-ledger",
    srcs = glob(["src/**/*.hs"]),
    hackage_deps = [
        "aeson",
        "async",
        "base",
        "bytestring",
        "containers",
        "exceptions",
        "extra",
        "grpc-haskell",
        "grpc-haskell-core",
        "mtl",
        "proto3-suite",
        "retry",
        "sorted-list",
        "text",
        "time",
        "transformers",
        "unliftio",
        "utf8-string",
        "vector",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//ledger-api/grpc-definitions:ledger-api-haskellpb",
    ],
)
